--- a/css/main.css
+++ b/css/main.css
@@ -12,14 +12,14 @@ body {
     background-color: darkcyan;
 }
 
-main {
+.container {
     display: inline-block;
     width: 800px;
     margin-top: 100px;
     margin-left: calc(50% - 400px);
 }
 
-main > div:first-child {
+.left-column {
     width: 40%;
     float: left;
     padding: 40px;
@@ -28,9 +28,24 @@ main > div:first-child {
 
 }
 
-main > div:last-child {
+.right-column {
     width: 60%;
     float: left;
     padding: 60px;
     background-color: #fff;
+}
+
+.btn {
+    display: inline-block;
+    background-color: blue;
+    padding: 15px;
+    padding-left: 40px;
+    padding-right: 40px;
+    border-radius: 4px;
+    line-height: 20px;
+    font-size: 24px;
+    text-decoration: none;
+    color: white;
+    border: none;
+    cursor: pointer;
 }
