--- a/css/main.css
+++ b/css/main.css
@@ -24,8 +24,29 @@ body {
     float: left;
     padding: 40px;
     margin-top: 20px;
-    background-color: rgb(81, 39, 137);
+    background-color: rgb(160, 133, 196);
+    color: #fff;
 
+}
+
+.main-title {
+    display: inline-block;
+    width: 100%;
+    font-size: 32px;
+    font-weight: normal;
+}
+
+.bottom-links {
+    display: inline-block;
+    width: 100%;
+}
+
+.bottom-links > .link {
+    color: #fff;
+    font-size: 14px;
+}
+
+.bottom-links > .symbol {
 }
 
 .right-column {
@@ -35,17 +56,3 @@ body {
     background-color: #fff;
 }
 
-.btn {
-    display: inline-block;
-    background-color: blue;
-    padding: 15px;
-    padding-left: 40px;
-    padding-right: 40px;
-    border-radius: 4px;
-    line-height: 20px;
-    font-size: 24px;
-    text-decoration: none;
-    color: white;
-    border: none;
-    cursor: pointer;
-}
