--- a/css/form.css
+++ b/css/form.css
@@ -1,5 +1,25 @@
 .form {
     display: inline-block;
     width: 100%;
-background-color: yellow;
+}
+
+.form > .form-row {
+    display: inline-block;
+    width: 100%;
+    margin-bottom: 30px;
+}
+
+.form > .form-row > label {
+    display: inline-block;
+    width: 100%;
+    margin-bottom: 5px;
+}
+
+.form > .form-row > input {
+    display: inline-block;
+    width: 100%;
+    font-size: 19px;
+    border-top: none;
+    border-left: none;
+    border-right: none;
 }
