--- a/css/main.css
+++ b/css/main.css
@@ -9,13 +9,13 @@ body * {
 }
 
 body {
-    background-color: darkcyan;
+    background-color: #06152A;
 }
 
 .container {
     display: inline-block;
     width: 800px;
-    margin-top: 100px;
+    margin-top: 80px;
     margin-left: calc(50% - 400px);
 }
 
