--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ body {
 .right-column {
     width: 60%;
     float: left;
-    padding: 60px;
+    padding: 50px;
     background-color: #fff;
 }
 
@@ -65,4 +65,23 @@ body {
 background-color: yellowgreen;
 }
 
+.right-column span {
+    display: inline-block;
+    padding: 10px;
+    line-height: 30px;
+    margin-left: 15px;
+    font-size: 18px;
+    }
+
+.right-column a {
+    display: inline-block;
+    padding: 15px;
+    line-height: 20px;
+    text-decoration: none;
+
+}
+
+.right-column a:hover {
+text-decoration: underline; 
+}
 
