--- a/css/main.css
+++ b/css/main.css
@@ -58,12 +58,20 @@ body {
     float: left;
     padding: 50px;
     background-color: #fff;
+    position: relative;
 }
 
 .close {
-    display: inline-block;
-background-color: yellowgreen;
-}
+    color: #737396 ;
+    width: 60px;
+    height: 60px;
+    line-height: 20px;
+    font-size: 37px;
+    line-height: 55px;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    right: 0;
 
 .right-column span {
     display: inline-block;
