Left column "auto"-height

--- a/css/main.css
+++ b/css/main.css
@@ -17,20 +17,21 @@ body {
     width: 800px;
     margin-top: 80px;
     margin-left: calc(50% - 400px);
+    position: relative;
 }
 
 .left-column {
     width: 40%;
     float: left;
     padding: 40px;
-    margin-top: 20px;
     background-color: rgb(79, 51, 117);
     background-image: url(../img/moon.png);
     background-position: center;
     background-size: cover;
     color: #fff;
-
-    height: 450px;
+    position: absolute;
+    top: 30px;
+    bottom: 30px;
 }
 
 .main-title {
@@ -41,8 +42,11 @@ body {
 }
 
 .bottom-links {
-    display: inline-block;
     width: 100%;
+    position: absolute;
+    bottom: 20px;
+    right: 40px;
+    left: 40px;
 }
 
 .bottom-links > .link {
@@ -55,7 +59,7 @@ body {
 
 .right-column {
     width: 60%;
-    float: left;
+    float: right;
     padding: 50px;
     background-color: #fff;
     position: relative;
