--- a/css/main.css
+++ b/css/main.css
@@ -9,9 +9,27 @@ body * {
 }
 
 body {
-    background-color: #06152A;
+    background: rgb(92,151,149);
+    background: linear-gradient(90deg, rgba(92,151,149,1) 0%, rgba(52,24,104,1) 47%);
     position: relative;
     height: 100vh;
+}
+
+.background-div {
+    height: 100%;
+    background-image: url(../img/moon.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    filter: blur(3rem);
+}
+
+.background-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    filter: blur(1rem);
 }
 
 .container {
@@ -31,6 +49,7 @@ body {
     background-color: rgb(79, 51, 117);
     background-image: url(../img/moon.png);
     background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
     color: #fff;
     position: absolute;
