--- a/css/main.css
+++ b/css/main.css
@@ -104,7 +104,9 @@ body {
 .right-column span {
     display: inline-block;
     padding: 10px;
-    line-height: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
+    line-height: 25px;
     margin-left: 15px;
     font-size: 18px;
     }
@@ -112,6 +114,8 @@ body {
 .right-column a {
     display: inline-block;
     padding: 15px;
+    padding-left: 10px;
+    padding-right: 10px;
     line-height: 20px;
     text-decoration: none;
 
